--- a/Cloudwatch.xcconfig
+++ b/Cloudwatch.xcconfig
@@ -3,7 +3,7 @@
 //  Cloudwatch
 //
 //  Created by Dmitri Goutnik on 21/12/2010.
-//  Copyright 2010 Invisible Llama. All rights reserved.
+//  Copyright 2010 Tundra Bot. All rights reserved.
 //
 
 PRODUCT_VERSION = 1.0
