--- a/ElasticPreferences/ElasticPreferences.xcconfig
+++ b/ElasticPreferences/ElasticPreferences.xcconfig
@@ -1,6 +1,6 @@
 //
-//  Cloudwatch.xcconfig
-//  Cloudwatch
+//  Elastic.xcconfig
+//  Elastic
 //
 //  Created by Dmitri Goutnik on 21/12/2010.
 //  Copyright 2010 Tundra Bot. All rights reserved.
