--- a/ElasticPreferences/Info.plist
+++ b/ElasticPreferences/Info.plist
@@ -23,10 +23,14 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSMinimumSystemVersion</key>
+	<string>10.6.6</string>
+	<key>LSMinimumSystemVersion</key>
 	<string>${MACOSX_DEPLOYMENT_TARGET}</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2011, Tundra Bot</string>
 </dict>
 </plist>
