fixed app category in Info.plist

--- a/Info.plist
+++ b/Info.plist
@@ -31,7 +31,7 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2011, Tundra Bot</string>
 	<key>LSApplicationCategoryType</key>
-	<string>public.app-category.productivity</string>
+	<string>public.app-category.developer-tools</string>
 	<key>LSUIElement</key>
 	<string>1</string>
 </dict>
