renamed Elastic to Elastics to keep iTunes Connect happy

--- a/Info.plist
+++ b/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleIconFile</key>
 	<string>Icon.icns</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.tundrabot.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.tundrabot.Elastics</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
