fixed background timer refresh; fixed crash due to premature release of NSCarbonMenuWindow

--- a/ElasticsPreferences/ElasticsPreferences.xcconfig
+++ b/ElasticsPreferences/ElasticsPreferences.xcconfig
@@ -1,12 +1,12 @@
 //
-//  Elastics.xcconfig
+//  ElasticsPreferences.xcconfig
 //  Elastics
 //
 //  Created by Dmitri Goutnik on 21/12/2010.
 //  Copyright 2010 Tundra Bot. All rights reserved.
 //
 
-PRODUCT_VERSION = 1.4
+PRODUCT_VERSION = 1.4.1
 
 GCC_WARN_CHECK_SWITCH_STATEMENTS = YES
 GCC_WARN_SHADOW = YES
@@ -19,10 +19,12 @@ GCC_WARN_ABOUT_MISSING_FIELD_INITIALIZERS = YES
 GCC_WARN_ABOUT_MISSING_PROTOTYPES = YES
 GCC_WARN_ABOUT_MISSING_NEWLINE = YES
 //GCC_WARN_MULTIPLE_DEFINITION_TYPES_FOR_SELECTOR = YES
+CLANG_WARN_DEPRECATED_OBJC_IMPLEMENTATIONS = YES
 GCC_WARN_ABOUT_POINTER_SIGNEDNESS = YES
 //GCC_WARN_PROTOTYPE_CONVERSION = YES
 GCC_WARN_SIGN_COMPARE = YES
 //GCC_WARN_STRICT_SELECTOR_MATCH = YES
+CLANG_WARN_SUSPICIOUS_IMPLICIT_CONVERSION = YES
 GCC_WARN_TYPECHECK_CALLS_TO_PRINTF = YES
 GCC_WARN_UNDECLARED_SELECTOR = YES
 //GCC_WARN_UNINITIALIZED_AUTOS = YES
@@ -34,5 +36,3 @@ GCC_WARN_UNUSED_VALUE = YES
 GCC_WARN_UNUSED_VARIABLE = YES
 GCC_WARN_ABOUT_DEPRECATED_FUNCTIONS = YES
 GCC_WARN_ABOUT_INVALID_OFFSETOF_MACRO = YES
-
-//GCC_WARN_PEDANTIC
